# ha_cez_distribuce

./: .editorconfig  .gitignore  .hassfest  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  DEVELOPMENT.md  KNOWN_ISSUES.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README-old.md  README.md  README_EN.md  RELEASE_NOTES.md  RELEASE_NOTES_EN.md  TODO.md  build-card.sh  build-frontend.sh  build.sh  copilot-instructions.md  copy-to-ha.sh  deploy-selective.sh  deploy-test.sh  hacs.json  info.md  pyproject.toml  release_message.md  test-component.sh
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yaml  hacs.yaml  hassfest.yaml  quality.yaml  release.yaml  stats.yaml  traffic-stats.yaml  validate.yaml
.github/workflows /: hassfest.yaml
custom_components/cez_hdo/: __init__.py  base_entity.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  downloader.py  manifest.json  registry_cleanup.py  sensor.py  services.yaml
custom_components/cez_hdo/frontend/: .eslintrc.js  README.md  __init__.py  package-lock.json  package.json  tsconfig.json  webpack.config.js
custom_components/cez_hdo/frontend/src/: cez-hdo-card-editor.ts  cez-hdo-card-working.ts  cez-hdo-card.ts  types.ts
custom_components/cez_hdo/translations/: cs.json  en.json
custom_components/cezdistribuce_dev/: .gitignore  binary_sensor.py  downloader.py  manifest.json  test2.py
dev/: comprehensive_test.py  deploy-dev.sh  deploy.sh  final_test.py
dev/cez_hdo/: __init__.py  base_entity.py  binary_sensor.py  downloader.py  manifest.json  sensor.py
dev/frontend/: README.md  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
dev/frontend/src/: cez-hdo-card-editor.ts  cez-hdo-card-simple.ts  cez-hdo-card-working.ts  cez-hdo-card.ts  index.ts
dev/src/: __init__.py  manifest.json
docs/: developer-guide.md  service-guide.md  upgrade-guide.md  user-guide.md
docs/cs/: developer-guide.md  known-issues.md  service-guide.md  user-guide.md
docs/en/: developer-guide.md  known-issues.md  service-guide.md  upgrade-guide.md  user-guide.md
traffic-ha_cez_distribuce/: traffic_clones.json  traffic_clones_per_week.json  traffic_paths.json  traffic_referrers.json  traffic_views.json  traffic_views_per_week.json
www/: package.json  tsconfig.json  webpack.config.js
www/cez_hdo/: cez-hdo-card.js
