[project]
name = "ha_cez_distribuce"
version = "3.0.0"
description = "HomeAssistant integration for CEZ Distribution HDO."
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "Cmajda", email = "cmajdalkam@gmail.com" },
    { name = "pokornyIt", email = "8665714+pokornyIt@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.14.2,<=3.15.0"
dependencies = [
    "homeassistant>=2025.12.0",
    "requests~=2.32.0",
    "packaging~=26.0",
]

[dependency-groups]
dev = [
    "homeassistant-stubs>=2025.12.0",
    "ruff~=0.14.0",
    "mypy~=1.19.1",
    "pre-commit~=4.5.1",
]
